Got rid of the comments and added my content.

--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Description here" />
-	<title></title>
-	<!-- 
-		You can connect the CSS to the HTML here, 
-		inside the head tag. Here is an example:
-		https://www.w3schools.com/tags/tag_link.asp
-	
-		Your CSS is inside the css folder in this project, 
-		so you will link to "css/style.css" instead of just 
-		"style.css". The css/ represents the folder.
-	-->
+	<title>Leena's Favorite Place</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-	<!-- 
-	This is an HTML comment. 
-	It is optional, and you can delete it or use it to
-	source help you get from AI tools like ChatGPT.
+	<h1> My Favorite Place: South Korea </h1>
+	<h2> Leena Jang </h2>
 
-	Make sure all of your content is inside the body tag.
+	<img src="images/korea.jpeg" alt="South Korea landscape" width="642" height="427">
+	<p> South Korea holds a special place in my heart. It's where I grew up until I turned ten, surrounded by my family.
+		Whenever I visit, it's not just about the amazing food and exciting places to explore—it's about reconnecting
+		with
+		my loved ones. Nothing beats spending quality time with family in a place that holds so many memories. </p>
 
-	If you'd like to add an image, save it to the images
-	folder. Then, add an img tag. Here is an example:
-	https://www.w3schools.com/tags/tag_img.asp
+	<h3> Top Attractions in South Korea </h3>
+	<ol>
+		<li> Hongdae, Seoul </li>
+		<li> Lotte World, Seoul </li>
+		<li> Cheonggyecheon, Seoul </li>
+		<li> Dongdaemun Design Plaza, Seoul </li>
+		<li> Gamcheon Culture Village, Busan </li>
+	</ol>
 
-	Like your CSS link above, you are linking to a file
-	inside a folder in this project, so you'll need to link
-	to "images/your-image-name.jpg" for the image to show.
-	-->
+	<h3> Tips for South Korea </h3>
+	<ul>
+		<li> Respect the elders. </li>
+		<li> South Korea is a very safe country. </li>
+		<li> There is Wi-Fi available everywhere. </li>
+		<li> Public transportation system is very good. Always take subway or buses. </li>
+		<li> Tipping isn't necessary. It's not part of Korean culture, and it could come off as rude. </li>
+	</ul>
+
+	<a href="https://www.audleytravel.com/us/south-korea/country-guides/south-korea-for-the-first-time-visitor"> Click
+		here to learn more about South Korea's traveling story! </a>
+
 </body>
+
 </html>
