Added Top Food to Try in South Korea section.

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,15 @@
 		<li> Tipping isn't necessary. It's not part of Korean culture, and it could come off as rude. </li>
 	</ul>
 
+	<h3> Top Food to Try in South Korea </h3>
+	<ol>
+		<li> Bulgogi </li>
+		<li> Bibimbap </li>
+		<li> Tteokbokki </li>
+		<li> Samgyeopsal </li>
+		<li> Jajangmyeon </li>
+	</ol>
+
 	<a href="https://www.audleytravel.com/us/south-korea/country-guides/south-korea-for-the-first-time-visitor"> Click
 		here to learn more about South Korea's traveling story! </a>
 
