Added code for images

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,12 @@
 		<li> Gamcheon Culture Village, Busan </li>
 	</ol>
 
+	<img src="images/hongdae.jpg" alt="Night view of Hongdae">
+	<img src="images/lotteworld.jpg" alt="Lotte World wide bird view">
+	<img src="images/cheonggyecheon.jpg" alt="Night view of Cheonggyecheon">
+	<img src="images/dongdaemun.jpg" alt="Night view of Dongdaemun Design Plaza">
+	<img src="images/gamcheon.jpg" alt="Gamcheon Cultural Village landscape">
+
 	<h3> Tips for South Korea </h3>
 	<ul>
 		<li> Respect the elders. </li>
