Tried out different heading name.

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Description here" />
-	<title>Leena's Favorite Place</title>
+	<title>Leena's Favorite Place: South Korea</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<h1> My Favorite Place: South Korea </h1>
-	<h2> Leena Jang </h2>
+	<h1> South Korea </h1>
+	<h2> Leena's Favorite Place </h2>
 
-	<img src="images/korea.jpeg" alt="South Korea landscape" width="642" height="427">
+	<img src="images/korea.jpg" alt="South Korea landscape">
 	<!-- This paragraph was written with ChatGPT's assistance-->
 	<p> South Korea has always held a special place in my heart, and it's not just because of the amazing attractions and
 		mouthwatering food—though those are definitely huge draws! Exploring the lively streets of Seoul or soaking in the
@@ -32,17 +32,19 @@
 
 	<h3> Top Attractions in South Korea </h3>
 	<ol>
-		<li> Hongdae, Seoul </li>
-		<li> Lotte World, Seoul </li>
-		<li> Cheonggyecheon, Seoul </li>
-		<li> Dongdaemun Design Plaza, Seoul </li>
-		<li> Gamcheon Culture Village, Busan </li>
+		<li> Hongdae </li>
+		<li> Lotte World </li>
+		<li> Cheonggyecheon </li>
+		<li> Dongdaemun Design Plaza </li>
+		<li> Haeundae </li>
+		<li> Gamcheon Culture Village </li>
 	</ol>
 
 	<img src="images/hongdae.jpg" alt="Night view of Hongdae">
 	<img src="images/lotteworld.jpg" alt="Lotte World wide bird view">
 	<img src="images/cheonggyecheon.jpg" alt="Night view of Cheonggyecheon">
 	<img src="images/dongdaemun.jpg" alt="Night view of Dongdaemun Design Plaza">
+	<img src="images/haeundae.jpg" alt="Haeundae beach scenery">
 	<img src="images/gamcheon.jpg" alt="Gamcheon Cultural Village landscape">
 
 	<h3> Tips for South Korea </h3>
@@ -54,6 +56,12 @@
 		<li> Tipping isn't necessary. It's not part of Korean culture, and it could come off as rude. </li>
 	</ul>
 
+
+	<img src="images/streetfood.jpg" alt="Street food scene in South Korea">
+	<p> South Korea is famous for its vibrant street food culture. Rain or shine, the scent of delicious food fills the
+		air on every street corner, which is something I absolutely love about the country. Tteokbokki (spicy rice cake)
+		and odeng (fish cake) are two of the most popular street snacks. This combination is my go-to comfort food,
+		always bringing me joy and satisfaction. </p>
 	<h3> Top Food to Try in South Korea </h3>
 	<ol>
 		<li> Bulgogi </li>
