--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Description here" />
-	<title>Leena's Favorite Place: South Korea</title>
+	<title> South Korea </title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<h1> South Korea </h1>
-	<h2> Leena's Favorite Place </h2>
+	<h2> Where Beauty Meets Flavor in Every Experience! </h2>
 
 	<img src="images/korea.jpg" alt="South Korea landscape">
 	<!-- This paragraph was written with ChatGPT's assistance-->
@@ -32,20 +32,13 @@
 
 	<h3> Top Attractions in South Korea </h3>
 	<ol>
-		<li> Hongdae </li>
-		<li> Lotte World </li>
-		<li> Cheonggyecheon </li>
-		<li> Dongdaemun Design Plaza </li>
-		<li> Haeundae </li>
-		<li> Gamcheon Culture Village </li>
+		<li> <img src="images/hongdae.jpg" alt="Night view of Hongdae"> Hongdae </li>
+		<li> <img src="images/lotteworld.jpg" alt="Lotte World wide bird view"> Lotte World </li>
+		<li> <img src="images/cheonggyecheon.jpg" alt="Night view of Cheonggyecheon"> Cheonggyecheon </li>
+		<li> <img src="images/dongdaemun.jpg" alt="Night view of Dongdaemun Design Plaza"> Dongdaemun Design Plaza </li>
+		<li> <img src="images/haeundae.jpg" alt="Haeundae beach scenery"> Haeundae </li>
+		<li> <img src="images/gamcheon.jpg" alt="Gamcheon Cultural Village landscape"> Gamcheon Culture Village </li>
 	</ol>
-
-	<img src="images/hongdae.jpg" alt="Night view of Hongdae">
-	<img src="images/lotteworld.jpg" alt="Lotte World wide bird view">
-	<img src="images/cheonggyecheon.jpg" alt="Night view of Cheonggyecheon">
-	<img src="images/dongdaemun.jpg" alt="Night view of Dongdaemun Design Plaza">
-	<img src="images/haeundae.jpg" alt="Haeundae beach scenery">
-	<img src="images/gamcheon.jpg" alt="Gamcheon Cultural Village landscape">
 
 	<h3> Tips for South Korea </h3>
 	<ul>
