Added class to some images

--- a/src/index.html
+++ b/src/index.html
@@ -8,34 +8,49 @@
 	<meta name="description" content="Description here" />
 	<title> South Korea </title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Yeon+Sung&display=swap"
+		rel="stylesheet">
+
+
 </head>
+
 
 <body>
 	<h1> South Korea </h1>
 	<h2> Where Beauty Meets Flavor in Every Experience! </h2>
 
-	<img src="images/korea.jpg" alt="South Korea landscape">
+	<img class="bigimg" src="images/korea.jpg" alt="South Korea landscape">
 	<!-- This paragraph was written with ChatGPT's assistance-->
-	<p> South Korea has always held a special place in my heart, and it's not just because of the amazing attractions and
-		mouthwatering food—though those are definitely huge draws! Exploring the lively streets of Seoul or soaking in the
+	<p> South Korea has always held a special place in my heart, and it's not just because of the amazing attractions
+		and
+		mouthwatering food—though those are definitely huge draws! Exploring the lively streets of Seoul or soaking in
+		the
 		natural beauty of Jeju Island always fills me with excitement and wonder. And let's not forget about the food!
 		Korean cuisine is a delightful journey in itself, from the delicious flavors
-		of bibimbap to the bold tanginess of kimchi. But what really gets my taste buds dancing is the street food scene.
-		There's nothing quite like strolling through the markets, sampling everything from crispy pancakes to spicy rice
+		of bibimbap to the bold tanginess of kimchi. But what really gets my taste buds dancing is the street food
+		scene.
+		There's nothing quite like strolling through the markets, sampling everything from crispy pancakes to spicy
+		rice
 		cakes—it's a treat for the senses! Beyond the sights and flavors, there's so much to experience in South Korea.
 		Whether it's discovering ancient
 		palaces, hiking through breathtaking landscapes, or diving into the latest K-pop trends, there's never a dull
-		moment. But what truly makes South Korea feel like home to me is the time spent with my family. Laughing, sharing
+		moment. But what truly makes South Korea feel like home to me is the time spent with my family. Laughing,
+		sharing
 		stories,
-		and simply enjoying each other's company against the backdrop of this vibrant country—it's moments like these that
+		and simply enjoying each other's company against the backdrop of this vibrant country—it's moments like these
+		that
 		make every visit unforgettable. </p>
 
 	<h3> Top Attractions in South Korea </h3>
-	<ol>
+	<ol class="attractions">
 		<li> <img src="images/hongdae.jpg" alt="Night view of Hongdae"> Hongdae </li>
 		<li> <img src="images/lotteworld.jpg" alt="Lotte World wide bird view"> Lotte World </li>
 		<li> <img src="images/cheonggyecheon.jpg" alt="Night view of Cheonggyecheon"> Cheonggyecheon </li>
-		<li> <img src="images/dongdaemun.jpg" alt="Night view of Dongdaemun Design Plaza"> Dongdaemun Design Plaza </li>
+		<li> <img src="images/dongdaemun.jpg" alt="Night view of Dongdaemun Design Plaza"> Dongdaemun Design Plaza
+		</li>
 		<li> <img src="images/haeundae.jpg" alt="Haeundae beach scenery"> Haeundae </li>
 		<li> <img src="images/gamcheon.jpg" alt="Gamcheon Cultural Village landscape"> Gamcheon Culture Village </li>
 	</ol>
@@ -50,13 +65,15 @@
 	</ul>
 
 
-	<img src="images/streetfood.jpg" alt="Street food scene in South Korea">
-	<p> South Korea is famous for its vibrant street food culture. Rain or shine, the scent of delicious food fills the
-		air on every street corner, which is something I absolutely love about the country. Tteokbokki (spicy rice cake)
+	<img class="streetfood" src="images/streetfood.jpg" alt="Street food scene in South Korea">
+	<p> South Korea is famous for its vibrant street food culture. Rain or shine, the scent of delicious food fills
+		the
+		air on every street corner, which is something I absolutely love about the country. Tteokbokki (spicy rice
+		cake)
 		and odeng (fish cake) are two of the most popular street snacks. This combination is my go-to comfort food,
 		always bringing me joy and satisfaction. </p>
 	<h3> Top Food to Try in South Korea </h3>
-	<ol>
+	<ol class="food">
 		<li> Bulgogi </li>
 		<li> Bibimbap </li>
 		<li> Tteokbokki </li>
