Change class name to make it more clear for other developers

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 	<h1> South Korea </h1>
 	<h2> Where Beauty Meets Flavor in Every Experience! </h2>
 
-	<img class="bigimg" src="images/korea.jpg" alt="South Korea landscape">
+	<img class="main_img" src="images/korea.jpg" alt="South Korea landscape">
 	<!-- This paragraph was written with ChatGPT's assistance-->
 	<p> South Korea has always held a special place in my heart, and it's not just because of the amazing attractions
 		and
