Added class tags and css to them

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
 
 	<img class="main_img" src="images/korea.jpg" alt="South Korea landscape">
 	<!-- This paragraph was written with ChatGPT's assistance-->
-	<p> South Korea has always held a special place in my heart, and it's not just because of the amazing attractions
+	<p class="intro"> South Korea has always held a special place in my heart, and it's not just because of the
+		amazing
+		attractions
 		and
 		mouthwatering food—though those are definitely huge draws! Exploring the lively streets of Seoul or soaking in
 		the
@@ -46,13 +48,16 @@
 
 	<h3> Top Attractions in South Korea </h3>
 	<ol class="attractions">
-		<li> <img src="images/hongdae.jpg" alt="Night view of Hongdae"> Hongdae </li>
-		<li> <img src="images/lotteworld.jpg" alt="Lotte World wide bird view"> Lotte World </li>
-		<li> <img src="images/cheonggyecheon.jpg" alt="Night view of Cheonggyecheon"> Cheonggyecheon </li>
-		<li> <img src="images/dongdaemun.jpg" alt="Night view of Dongdaemun Design Plaza"> Dongdaemun Design Plaza
+		<li> <img class="attraction_img" src="images/hongdae.jpg" alt="Night view of Hongdae"> Hongdae </li>
+		<li> <img class="attraction_img" src="images/lotteworld.jpg" alt="Lotte World wide bird view"> Lotte World </li>
+		<li> <img class="attraction_img" src="images/cheonggyecheon.jpg" alt="Night view of Cheonggyecheon">
+			Cheonggyecheon </li>
+		<li> <img class="attraction_img" src="images/dongdaemun.jpg" alt="Night view of Dongdaemun Design Plaza">
+			Dongdaemun Design Plaza
 		</li>
-		<li> <img src="images/haeundae.jpg" alt="Haeundae beach scenery"> Haeundae </li>
-		<li> <img src="images/gamcheon.jpg" alt="Gamcheon Cultural Village landscape"> Gamcheon Culture Village </li>
+		<li> <img class="attraction_img" src="images/haeundae.jpg" alt="Haeundae beach scenery"> Haeundae </li>
+		<li> <img class="attraction_img" src="images/gamcheon.jpg" alt="Gamcheon Cultural Village landscape"> Gamcheon
+			Culture Village </li>
 	</ol>
 
 	<h3> Tips for South Korea </h3>
