--- a/src/index.html
+++ b/src/index.html
@@ -48,20 +48,26 @@
 
 	<h3> Top Attractions in South Korea </h3>
 	<ol class="attractions">
-		<li> <img class="attraction_img" src="images/hongdae.jpg" alt="Night view of Hongdae"> Hongdae </li>
-		<li> <img class="attraction_img" src="images/lotteworld.jpg" alt="Lotte World wide bird view"> Lotte World </li>
-		<li> <img class="attraction_img" src="images/cheonggyecheon.jpg" alt="Night view of Cheonggyecheon">
+		<li class="attraction_list"> <img class="attraction_img" src="images/hongdae.jpg" alt="Night view of Hongdae">
+			Hongdae </li>
+		<li class="attraction_list"> <img class="attraction_img" src="images/lotteworld.jpg"
+				alt="Lotte World wide bird view"> Lotte World </li>
+		<li class="attraction_list"> <img class="attraction_img" src="images/cheonggyecheon.jpg"
+				alt="Night view of Cheonggyecheon">
 			Cheonggyecheon </li>
-		<li> <img class="attraction_img" src="images/dongdaemun.jpg" alt="Night view of Dongdaemun Design Plaza">
+		<li class="attraction_list"> <img class="attraction_img" src="images/dongdaemun.jpg"
+				alt="Night view of Dongdaemun Design Plaza">
 			Dongdaemun Design Plaza
 		</li>
-		<li> <img class="attraction_img" src="images/haeundae.jpg" alt="Haeundae beach scenery"> Haeundae </li>
-		<li> <img class="attraction_img" src="images/gamcheon.jpg" alt="Gamcheon Cultural Village landscape"> Gamcheon
+		<li class="attraction_list"> <img class="attraction_img" src="images/haeundae.jpg" alt="Haeundae beach scenery">
+			Haeundae </li>
+		<li class="attraction_list"> <img class="attraction_img" src="images/gamcheon.jpg"
+				alt="Gamcheon Cultural Village landscape"> Gamcheon
 			Culture Village </li>
 	</ol>
 
 	<h3> Tips for South Korea </h3>
-	<ul>
+	<ul class="tips">
 		<li> Respect the elders. </li>
 		<li> South Korea is a very safe country. </li>
 		<li> There is Wi-Fi available everywhere. </li>
@@ -69,16 +75,19 @@
 		<li> Tipping isn't necessary. It's not part of Korean culture, and it could come off as rude. </li>
 	</ul>
 
+	<section class="food">
+		<img class="streetfood" src="images/streetfood.jpg" alt="Street food scene in South Korea">
+		<p class="streetfood_caption"> South Korea is famous for its vibrant street food culture. Rain or shine, the scent
+			of delicious food fills
+			the
+			air on every street corner, which is something I absolutely love about the country. Tteokbokki (spicy rice
+			cake)
+			and odeng (fish cake) are two of the most popular street snacks. This combination is my go-to comfort food,
+			always bringing me joy and satisfaction. </p>
+	</section>
 
-	<img class="streetfood" src="images/streetfood.jpg" alt="Street food scene in South Korea">
-	<p> South Korea is famous for its vibrant street food culture. Rain or shine, the scent of delicious food fills
-		the
-		air on every street corner, which is something I absolutely love about the country. Tteokbokki (spicy rice
-		cake)
-		and odeng (fish cake) are two of the most popular street snacks. This combination is my go-to comfort food,
-		always bringing me joy and satisfaction. </p>
 	<h3> Top Food to Try in South Korea </h3>
-	<ol class="food">
+	<ol class="food_list">
 		<li> Bulgogi </li>
 		<li> Bibimbap </li>
 		<li> Tteokbokki </li>
